Fixed responsive design issues (hopefully) -added correct meta tag in about me.html 	-"X-UA-Compatible" content="ie=edge 	-hopefully this corrects the scaling/zooming issue on mobile -in styles.css, added seperate media queries for desktop and mobile viewing as the website responded better this way -in mobile media queries, grid-template-columns in the .card class has been changed from desktop .card class to be more responsive and accomodate smaller screen sizes and portrait views -the background color of the navbar has been changed back to a solid blue instead of being opaque 	- this fixes the issue that when scrolling the text of the 	  navbar clashing with the text of the page content -the background color of the footer was also changed to solid blue from opaque for the same reasons as above - a logo has been added to the navbar on the left 	-this was created using a free logo creating website 	http://www.jimdo.com - in styles.css, stlying for a custom scrollbar in the desktop view has   been created   	-the scroll bar is now pink, dark pink on hover, with the track 	being white and overall smaller in width 	-fits in better with the rest of the website design -other minor design issues were done, such as adjusting the alignment of texts/divs with each other, just so everything is nice and neat *current issues still to fix* -the contact info in about me.html refuses to move/drop down a line

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,9 +15,29 @@
     --blue: #150941;
 }
 
+/*custom scrollbar styling*/
+
+::-webkit-scrollbar { /* width of the scrollbar */
+    width: 10px;
+}
+  
+::-webkit-scrollbar-track {  /* color of track*/
+    background: #ffffff;
+}
+  
+::-webkit-scrollbar-thumb { /* color of handle */
+    background: var(--pink);
+}
+  
+::-webkit-scrollbar-thumb:hover { /* color of handle on hover */
+    background: #720b25;
+}
+
+/*end of custom scrollbar stlying*/
+
 body{
     min-height: 100vh;
-    overflow: hidden;
+    overflow-x: hidden;
     margin:0%;
 }
 
@@ -46,7 +66,7 @@ body{
 /*mobile first navbar styling*/
 
 header {
-    background-color: var(--bg_opacity);
+    background-color: var(--blue);
     text-align: center;
     position: fixed;
     width: 100%;
@@ -113,16 +133,8 @@ header {
     height: 50%;
     width: auto;
     margin-left: -100px;
-    margin-top: 12px; 
+    margin-top: 15px; 
 }
-
-/*.logo_small {
-    height: 50%;
-    width: auto;
-    margin-left: 50px;
-    margin-top: 10px;
-    display: block;
-}*/
 
 nav {
     position:absolute;
@@ -207,13 +219,9 @@ nav a:hover::before {
         grid-column: 1 / 3;
         align-items: center;
         margin-left: 5em;
-        margin-top: 30px;
+        margin-top: 20px;
         width: 60%;
         height: auto;
-    }
-
-    .logo_small {
-        display: none;
     }
 
     nav {
@@ -227,7 +235,7 @@ nav a:hover::before {
     nav ul {
         position: relative;
         display: flex;
-        bottom: 10px;
+        bottom: 8px;
         margin-top: auto;    
     }
 
@@ -270,8 +278,8 @@ nav a:hover::before {
         z-index: 1;
         position: relative;
         margin: auto;
-        top: 250px;
-        height: 50vh;
+        top: 200px;
+        height: 60vh;
         width: 80%;
         box-shadow: 0px 20px 10px -12px rgb(0, 0, 0);
         border-radius: 30px;
@@ -299,12 +307,13 @@ nav a:hover::before {
         opacity: 1;
         animation: slideIn 0.25s forwards;
         -webkit-animation: slideIn 0.25s forwards;
-        animation-delay: 0.5s;
-        -webkit-animation-delay: 0.5s;
+        animation-delay: 0.75s;
+        -webkit-animation-delay: 0.75s;
     }
 
     .pgheader_hr {
         background-color: var(--blue);
+        box-shadow: 5px 5px white;
         border: 0px;
         height: 8px;
         width: auto;
@@ -319,10 +328,10 @@ nav a:hover::before {
         justify-items: center;
         margin: 0 auto 0 auto;
         top: 125px;
-        background-color: white;
-        width: 150px;
-        height: 150px;
+        width: 200px;
+        height: 200px;
         object-fit: cover;
+        border: 5px solid var(--blue);
         border-radius: 300px;
         box-shadow: 0 0 0 0 var(--blue);
         animation: pulse 2s infinite;
@@ -335,32 +344,50 @@ nav a:hover::before {
         top: 150px;
         color: var(--blue);
         position: inherit;
-        font-size: 50pt;
+        font-size: 30pt;
         text-align: center;  
     }
 
     .content {
         display: flex;
         grid-column:  4/ 6;
-        bottom: 25px;
+        bottom: 80px;
         height: 200px;
         width: 400px;
-        font-size: 1rem;
+        font-size: 1.1rem;
         position: relative;
         text-align: justify;
     }
 
     .contact_info {
-        display: block;
-        grid-column:  4/ 5;
+        display: flex;
+        grid-column:  4/ 6;
+        bottom: 80px;
+        height: 200px;
+        width: 400px;
+        font-size: 1.1rem;
+        position: relative;
+        text-align: justify;
+        overflow-wrap: break-word;
+    }
+
+   /* .contact_info {
+        display: flex;
+        grid-column:  4/ 6;
         margin: 0 auto 0 auto;
         position: relative;
+        justify-content: center;
         right: 100px;
-        bottom: 85px;
+        bottom: 130px;
         height: 100px;
         width: 400px;
-        text-align: center;
-        font-size: 13pt;
+        text-align: left;
+        font-size: 1.1rem; 
+    }*/
+
+    span {
+        content: '';
+        width: 100%;
     }
 
     a {
@@ -404,20 +431,20 @@ nav a:hover::before {
     background-color: var(--pink);
     z-index: 1;
     position: relative;
-    margin: auto;
+    margin: 0 auto 0 auto;
     top: 80px;
-    height: 80vh;
+    height: 1000px;
     width: 80%;
     box-shadow: 0px 20px 10px -12px rgb(0, 0, 0);
     border-radius: 30px;
     opacity: 0.9;
     display: grid;
-    grid-template-columns: auto minmax(100px, max-content) repeat(auto-fit, 200px) 5%;
+    grid-template-columns: minmax(0, 1fr) 200px;
 }
 
 .wrapper {
-    position: absolute;
-    width: 200%;
+    position: relative;
+    width: 100%;
     display: flex;
     grid-column:  1/ 4;
     justify-content: flex-start;
@@ -429,13 +456,14 @@ nav a:hover::before {
     position: relative;
     z-index: 2;
     font-size: 3rem;
-    text-align: right;
+    text-align: left;
     left: -2000px;
+    width: 50%;
     opacity: 1;
     animation: slideIn 0.25s forwards;
     -webkit-animation: slideIn 0.25s forwards;
-    animation-delay: 0.5s;
-    -webkit-animation-delay: 0.5s;
+    animation-delay: 0.75s;
+    -webkit-animation-delay: 0.75s;
 }
 
 .pgheader_hr {
@@ -443,7 +471,6 @@ nav a:hover::before {
     border: 0px;
     height: 8px;
     width: auto;
-    padding-left: 300px;
     margin: auto;
 }
 
@@ -453,13 +480,16 @@ nav a:hover::before {
     position: relative;
     justify-items: center;
     margin: 0 auto 0 auto;
-    right: vw;
-    top: 15vh;
+    right: 0vw;
+    top: 0vh;
     background-color: white;
-    width: 130px;
-    height: 130px;
+    width: 25%;
+    height: 60%;
+    min-width: 120px;
+    max-height: 170px;
     object-fit: cover;
-    border-radius: 100px;
+    border: 5px solid var(--blue);
+    border-radius: 300px;
     box-shadow: 0 0 0 0 var(--blue);
     animation: pulse 2s infinite;
 }
@@ -467,13 +497,12 @@ nav a:hover::before {
 .socialmedia {
     display: flex;
     grid-column:  1/ 3;
-    justify-content: center;
-    padding-right: 15px;
-    top: 16vh;
+    justify-content: space-evenly;
+    top: -8vh;
     right: 0vw;
     color: var(--blue);
     position: inherit;
-    font-size: 45pt;
+    font-size: 25pt;
     text-align: center; 
 }
 
@@ -483,28 +512,44 @@ nav a:hover::before {
     position: relative;
     justify-content: center;
     margin: 0 auto 0 auto;
-    right: 10px;
-    top: 18vh;
+    right: 0vw;
+    top: -5vh;
     bottom: 0px;
-    height: 300%;
-    width: 40vw;
-    font-size: calc(1vmin + 1vmax);
-    text-align: justify;
-    
+    height: 10%;
+    width: 80%;
+    font-size: 1em;
+    text-align: left;
 }
 
 .contact_info {
-    display: block;
+    display: flex;
     grid-column:  1/ 3;
-    margin: 0 auto 0 auto;
     position: relative;
-    right: 10vw;
-    bottom: 7vh;
-    height: 100px;
-    width: 400px;
-    text-align: center;
-    font-size: 13pt;
+    justify-content: center;
+    margin: 0 auto 0 auto;
+    right: 0vw;
+    top: 0vh;
+    bottom: 0px;
+    height: 10%;
+    width: 80%;
+    font-size: 1em;
+    text-align: left;
 }
+
+/*.contact_info {
+    display: flex;
+    grid-column:  1/ 3;
+    position: relative;
+    justify-content: center;
+    margin: 0 auto 0 auto;
+    right: 0vw;
+    top: -9vh;
+    height: 10%;
+    width: 100%;
+    font-size: 1em;
+    text-align: right;
+    
+}*/
 
 a {
     text-decoration: none;
